# pseudolanguage-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pnpm-workspace.yaml  rustfmt.toml
assets/: README.md
crates/: README.md
crates/compiler/: README.md
crates/compiler/pseudolangc/: Cargo.toml
crates/compiler/pseudolangc_ast/: Cargo.toml
crates/compiler/pseudolangc_codegen/: Cargo.toml
crates/compiler/pseudolangc_errors/: Cargo.toml
crates/compiler/pseudolangc_lexer/: Cargo.toml
crates/compiler/pseudolangc_main/: Cargo.toml
crates/compiler/pseudolangc_parser/: Cargo.toml
crates/compiler/pseudolangc_parser/src/: lib.rs
crates/compiler/pseudolangc_types/: Cargo.toml
crates/interpreter/: README.md
crates/interpreter/pseudolang-ast/: Cargo.toml
crates/interpreter/pseudolang-cli/: Cargo.toml
crates/interpreter/pseudolang-errors/: Cargo.toml
crates/interpreter/pseudolang-parser/: Cargo.toml
crates/interpreter/pseudolang-types/: Cargo.toml
crates/interpreter/pseudolang_ast/: Cargo.toml
crates/interpreter/pseudolang_errors/: Cargo.toml
crates/interpreter/pseudolang_lexer/: Cargo.toml
crates/interpreter/pseudolang_parser/: Cargo.toml
crates/pseudo-linter/: README.md
crates/pseudolang-ast/: Cargo.toml
crates/pseudolang-cli/: Cargo.toml
crates/pseudolang-errors/: Cargo.toml
crates/pseudolang-parser/: Cargo.toml
crates/pseudolang-support/: Cargo.toml  README.md
crates/pseudolang-types/: Cargo.toml
docs/: README.md
examples/: 0-hello-world.psl  README.md
src/: README.md
(+13 files in other folders)
