[package]
name = "pseudolangc_codegen"
version = "0.1.0"
authors = ["Losteey <pandagaminggr@gmail.com>"]

[dependencies]
cranelift = "0.102"
cranelift-module = "0.102"
cranelift-jit = "0.102"
cranelift-native = "0.102"

pseudolangc_ast = { path = "../pseudolangc_ast" }
pseudolangc_errors = { path = "../pseudolangc_errors" }
pseudolangc_types = { path = "../pseudolangc_types" }